[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nanosaur"
description = "A nanosaur package"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Raffaello Bonghi", email = "raffaello@rnext.it" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dynamic = ["dependencies","version"]

[tool.setuptools.dynamic]
# Dynamically read requirements
version = {attr = "nanosaur.__init__.__version__"}
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nanosaur = "nanosaur.main:main"

[project.urls]
homepage = "https://nanosaur.ai"
documentation = "https://docs.example.com"
repository = "https://github.com/rnanousaur/nanosaur"